--- a/ui/src/app/home/home.component.scss
+++ b/ui/src/app/home/home.component.scss
@@ -8,6 +8,10 @@
   .top-bar-container {
     background-color: $body-bg;
   }
+
+  a {
+    color: rgb(93, 93, 236);
+  }
 }
 
 :host-context(.bootstrap) {
@@ -24,6 +28,9 @@
 
 .first-page {
   gap: 50px;
+  justify-content: center;
+  align-items: center !important;
+  flex-direction: column;
 }
 
 .content-container {
@@ -36,13 +43,28 @@
 .content-page {
   display: flex;
   height: 100vh;
+  width: 100%;
   justify-content: center;
   flex-direction: column;
   align-items: stretch;
 }
 
-.new-session-button {
-  width: 100%;
+.normal-screen-about {
+  height: 100%;
+  flex-direction: column;
+}
+
+.small-screen-about {
+  height: 100%;
+  flex-direction: column;
+}
+
+.about-content-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+  gap: 20px;
 }
 
 .content-container {
@@ -110,4 +132,30 @@
 .about-carousel-layer {
   max-width: 80vw;
   align-self: center;
+}
+
+.faq-questions-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+}
+
+h1 {
+  margin-top: 70px;
+}
+
+h1,
+h5,
+p {
+  margin-left: 10px;
+}
+
+.contact-info-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
 }
