minor UI corrections

--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -14,7 +14,7 @@
   </div>
   <a name="about" id="about"></a>
   <div #about class="content-page">
-    <div class="small-screen-about d-flex d-md-none">
+    <div class="screen-about d-flex d-md-none">
       <div class="about-title-container">
         <h1>About</h1>
       </div>
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-    <div class="normal-screen-about d-none d-md-flex">
+    <div class="screen-about d-none d-md-flex">
       <h1>About</h1>
       <div class="carousel-container">
         <div class="about-grid">
@@ -84,15 +84,14 @@
     <h1>Contact</h1>
     <div class="contact-info-container">
       <ul>
-        <li>
-          <p><a href="https://github.com/pasiasty/cocoder/issues" target="_blank">File</a> an issue on GitHub.</p>
+        <li class="contact-list-item">
+          <h4><a href="https://github.com/pasiasty/cocoder/issues" target="_blank">File</a> an issue on GitHub.</h4>
         </li>
-        <li>
-          <p>Reach out on <a href="https://www.linkedin.com/in/mariusz-pasek-1365aa122/" target="_blank">LinkedIn</a>.
-          </p>
+        <li class="contact-list-item">
+          <h4>Reach out on <a href="https://www.linkedin.com/in/mariusz-pasek-1365aa122/" target="_blank">LinkedIn</a>.
+          </h4>
         </li>
       </ul>
-
     </div>
   </div>
 </div>
