--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -20,6 +20,6 @@ $decoration-colors: blue, red, yellow, green, magenta;
   }
 }
 
-/* Importing Bootstrap SCSS file. */
-@import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "./local-toggle-bootstrap.scss";
+@import "./local-toggle-bootstrap-dark.scss";
