--- a/ui/src/app/top-bar/top-bar.component.scss
+++ b/ui/src/app/top-bar/top-bar.component.scss
@@ -22,7 +22,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 56px;
+  min-height: 56px;
   align-items: center;
   padding-left: 7px;
   padding-right: 7px;
