--- a/ui/src/app/top-bar/top-bar.component.scss
+++ b/ui/src/app/top-bar/top-bar.component.scss
@@ -4,6 +4,7 @@
   font-family: "Courier New", Courier, monospace;
   font-size: 1.5em;
   text-align: center;
+  margin-left: 5px;
 }
 
 .language-dropdown {
@@ -24,8 +25,7 @@
   width: 100%;
   min-height: 56px;
   align-items: center;
-  padding-left: 7px;
-  padding-right: 7px;
+  padding: 7px;
 }
 
 .empty-space {
@@ -64,7 +64,7 @@
   display: flex;
   flex-direction: row;
   gap: 3px;
-  align-items: baseline;
+  align-items: center;
 }
 
 .home-navigation {
