--- a/ui/src/app/home/home.component.scss
+++ b/ui/src/app/home/home.component.scss
@@ -97,7 +97,8 @@
 .about-title-layer {
   margin-top: 80px;
   margin-left: 30px;
-  z-index: 1;
+  z-index: 2;
+  pointer-events: none;
 }
 
 .about-title {
