--- a/ui/src/app/progressive-img-loader/progressive-img-loader.component.html
+++ b/ui/src/app/progressive-img-loader/progressive-img-loader.component.html
@@ -1,4 +1,4 @@
 <div class="img-grid">
     <img [src]="_initialImg" class="carousel-image">
-    <img [src]="_finalImg" class="carousel-image">
+    <img [src]="_finalImg" class="carousel-image final-image">
 </div>
