--- a/ui/src/app/progressive-img-loader/progressive-img-loader.component.scss
+++ b/ui/src/app/progressive-img-loader/progressive-img-loader.component.scss
@@ -1,13 +1,3 @@
-@keyframes fadeout-animation {
-    from {opacity: 1;}
-    to {opacity: 0;}
-}
-
-.fadeout {
-  animation-name:  fadeout-animation;
-  animation-duration: 4s;
-}
-
 .carousel-image {
     max-height: 80vh;
     width: 80vw;
@@ -19,3 +9,7 @@
   .img-grid {
     display: grid;
   }
+
+.final-image {
+    z-index: 1;
+}
