--- a/ui/src/app/top-bar/top-bar.component.scss
+++ b/ui/src/app/top-bar/top-bar.component.scss
@@ -7,6 +7,13 @@
   margin-left: 5px;
 }
 
+:host-context(.bootstrap) {
+  .logo {
+    background-color: rgb(220, 220, 220);
+    border: 0px;
+  }
+}
+
 .language-dropdown {
   margin-left: 15px;
   min-width: 100px;
