--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -11,11 +11,11 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-$cursor-colors: rgb(255,255, 0), rgb(0, 128, 0), rgb(255, 0, 255), rgb(255, 0, 0), rgb(0, 0, 255);
-$selection-colors: rgb(255,255, 0), rgb(0, 128, 0), rgb(255, 0, 255), rgb(255, 0, 0), rgb(0, 0, 255);
+$cursor-colors: rgb(151, 104, 42), rgb(0, 128, 0), rgb(255, 0, 255), rgb(255, 0, 0), rgb(210,210, 0);
+$selection-colors: rgb(155, 106, 42), rgb(0, 128, 0), rgb(255, 0, 255), rgb(255, 0, 0), rgb(210,210, 0);
 
-$cursor-colors-dark: rgb(255,255, 0), rgb(0, 128, 0), rgb(255, 0, 255), rgb(255, 0, 0), rgb(0, 0, 255);
-$selection-colors-dark: rgb(255,255, 100), rgb(128, 255, 128), rgb(255, 0, 255), rgb(255, 0, 0), rgb(100, 100, 255);
+$cursor-colors-dark: rgb(151, 104, 42), rgb(128, 255, 128), rgb(255, 0, 255), rgb(255, 0, 0), rgb(255,255, 100);
+$selection-colors-dark: rgb(155, 106, 42), rgb(128, 255, 128), rgb(255, 0, 255), rgb(255, 0, 0), rgb(255,255, 100);
 
 @for $i from 1 through list.length($cursor-colors) {
   
