--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -1,7 +1,38 @@
 <app-page-not-found *ngIf="sessionInvalid; else normalContent"></app-page-not-found>
 <ng-template #normalContent>
     <div class="content-container">
-        <app-top-bar editorMode>
+        <app-top-bar>
+            <div ngbDropdown class="d-inline-block language-dropdown" title="Select language">
+                <button class="btn btn-outline-primary" ngbDropdownToggle>{{selectedLanguage}}</button>
+                <div ngbDropdownMenu class="dropdown-menu">
+                    <button *ngFor="let language of languages" ngbDropdownItem
+                        (click)="onLanguageChange(language)">{{language}}</button>
+                    <hr class="solid">
+                    <button *ngFor="let language of otherLanguages()" ngbDropdownItem
+                        (click)="onLanguageChange(language)">{{language}}</button>
+                </div>
+            </div>
+            <div type="button" class="btn btn-default" (click)="downloadButtonClicked()" title="Download your code">
+                <i mdbRipple class="bi bi-file-earmark-arrow-down h5"></i>
+            </div>
+            <div type="button" class="btn btn-default" (click)="shareButtonClicked()"
+                title="Share session with friends">
+                <i class="bi bi-share h5"></i>
+            </div>
+            <div type="button" class="btn btn-default" (click)="zoomInButtonClicked()" title="Zoom in">
+                <i class="bi bi-zoom-in h5"></i>
+            </div>
+            <div type="button" class="btn btn-default" (click)="zoomOutButtonClicked()" title="Zoom out">
+                <i class="bi bi-zoom-out h5"></i>
+            </div>
+            <div type="button" class="btn btn-default" (click)="notificationsButtonClicked()"
+                [title]="notificationsTitle()">
+                <i *ngIf="areNotificationsEnabled() else notificationsDisabledVariant"
+                    class="bi bi-chat-right-text-fill glowing-icon h5"></i>
+                <ng-template #notificationsDisabledVariant>
+                    <i class="bi bi-chat-right-text h5"></i>
+                </ng-template>
+            </div>
         </app-top-bar>
         <app-monaco-editor class="editor-container" (invalidSession)="sessionInvalid=true"></app-monaco-editor>
     </div>
