--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -1,4 +1,6 @@
 @import "../common.scss";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
 
 .content-container {
   overflow: hidden;
@@ -12,4 +14,19 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+}
+
+.language-dropdown {
+  margin-left: 15px;
+  min-width: 100px;
+  text-align: right;
+}
+
+.dropdown-menu {
+  overflow-y: auto;
+  max-height: 300px;
+}
+
+.glowing-icon {
+  text-shadow: 0px 0px 12px $primary;
 }
