--- a/ui/src/app/common.scss
+++ b/ui/src/app/common.scss
@@ -14,11 +14,14 @@
 }
 
 :host-context(.bootstrap-dark) {
-  .btn:hover {
+
+  .btn:hover,
+  .btn-sm:hover {
     background-color: rgb(90, 90, 90);
   }
 
-  .btn:active {
+  .btn:active,
+  .btn-sm:hover {
     background-color: rgb(40, 40, 40);
   }
 
@@ -28,7 +31,9 @@
 }
 
 :host-context(.bootstrap) {
-  .btn:hover {
+
+  .btn:hover,
+  .btn-sm:hover {
     background-color: rgb(200, 200, 200);
   }
 
