--- a/ui/src/app/monaco-editor/monaco-editor.component.html
+++ b/ui/src/app/monaco-editor/monaco-editor.component.html
@@ -1,1 +1,1 @@
-<div (window:resize)="onResize()" class="editor-container" #editorContainer></div>
+<div class="editor-container" #editorContainer></div>
