--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -8,12 +8,13 @@
   position: relative;
   flex-direction: column;
   height: 100%;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .editor-container {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
 }
 
 .language-dropdown {
@@ -29,4 +30,29 @@
 
 .glowing-icon {
   text-shadow: 0px 0px 12px $primary;
+}
+
+.resize-handle {
+  height: 20px;
+  margin-bottom: 10px;
+}
+
+.handle-line {
+  height: 20px;
+}
+
+:host-context(.bootstrap-dark) {
+  .handle-line {
+    background-color: $gray-600;
+  }
+}
+
+:host-context(.bootstrap) {
+  .handle-line {
+    background-color: $gray-300;
+  }
+}
+
+.bottom-bar {
+  height: 300px;
 }
